# Sidrat

./: .env.example  .gitignore  index.html  package-lock.json  package.json  render.yaml  tailwind.config.js  tsconfig.node.json  vite.config.ts
backend/: .env.example  Dockerfile  Makefile  alembic.ini  docker-compose.yml  entrypoint.sh  gunicorn_conf.py  nginx.conf  pyproject.toml
backend/app/: admin_cms.py  auth_service.py  cache.py  db.py  dependencies.py  emailer.py  main.py  models.py  schemas.py  security.py  seed.py  services.py  settings.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_auth_onboarding.py  0003_admin_cms.py
backend/tests/: conftest.py  test_api.py
docs/: mvp-backlog.md
docs/business-specification/: referral-reward-specification.docx
scripts/: fix_mojibake.py
src/: App.tsx  main.tsx
src/components/: CatalogMegaMenu.tsx  DiscountTierBadge.tsx  HeroCarousel.tsx  PriceDisplay.tsx  ProgressBar.tsx  QuantityAdjuster.tsx  SellerApplicationForm.tsx  VariantSelector.tsx
src/data/: mockData.ts
src/hooks/: useCart.ts  useSession.ts  useTierCalculator.ts
src/i18n/: I18nProvider.tsx  translations.ts
src/layouts/: AuthLayout.tsx  MainLayout.tsx
src/lib/: api.ts  auth.ts  catalog.ts  checkout-location.ts  cms.ts  image-manifest.ts  mvp.ts  seller.ts  shoe-sizes.ts  utils.ts
src/pages/: Bonus.tsx  Cart.tsx  Catalog.tsx  Checkout.tsx  CreateSession.tsx  Dashboard.tsx  Home.tsx  Login.tsx  NotFound.tsx  OrderSuccess.tsx  ProductDetail.tsx  Profile.tsx  Register.tsx  SellerApplication.tsx  (+3 more)
(+30 files in other folders)
