[tool.poetry]
name = "sidrat-backend"
version = "0.1.0"
description = "FastAPI backend for Sidrat marketplace"
authors = ["Sidrat"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = { version = "^0.34.0", extras = ["standard"] }
gunicorn = "^23.0.0"
sqlalchemy = { version = "^2.0.36", extras = ["asyncio"] }
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
redis = "^5.2.1"
orjson = "^3.10.12"
python-dotenv = "^1.0.1"
structlog = "^24.4.0"
httpx = "^0.28.1"
celery = "^5.4.0"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
pyjwt = "^2.10.1"
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.20.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
ruff = "^0.8.4"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
